readme description updated

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 				<div class="col-md-8 ml-auto mr-auto text-center pt-3">
 					<h2>Simple Reorderable List</h2>
 					<h4>JQuery Plugin</h4>
-					<h5>This is the paragraph where you can write more details about your product. Keep you user engaged by providing meaningful
-						information. Remember that by this time, the user is curious, otherwise he wouldn't scroll to get here. Add a button
-						if you want the user to see more.</h5>
+					<h6>Simple Reorderable List JQuery Plugin is a simple, flexible list plugin. It enables items in a list to be sorted horizontally using the mouse or up and down arrows.</h6>
+					<h6><i>jQuery Sortable depends on jQuery UI and works well with Twitter's Bootstrap.</i></h6>
 					<br>
 				</div>
 			</div>
