Github buttons added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	    crossorigin="anonymous">
 	<link type="text/css" rel="stylesheet" href="css/style.css" />
 	<link type="text/css" rel="stylesheet" href="css/reorderable.css" />
+
+	<!-- Place this tag in your head or just before your close body tag. -->
+	<script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 
 <body>
@@ -17,9 +20,15 @@
 				<div class="col-md-8 ml-auto mr-auto text-center pt-3">
 					<h2>Simple Reorderable List</h2>
 					<h4>JQuery Plugin</h4>
-					<h6>Simple Reorderable List JQuery Plugin is a simple, flexible list plugin. It enables items in a list to be sorted horizontally using the mouse or up and down arrows.</h6>
-					<h6><i>jQuery Sortable depends on jQuery UI and works well with Twitter's Bootstrap.</i></h6>
-					<br>
+					<h6>Simple Reorderable List JQuery Plugin is a simple, flexible list plugin. It enables items in a list to be sorted horizontally
+						using the mouse or up and down arrows.</h6>
+				</div>
+				<div class="col-md-8 ml-auto mr-auto text-center">
+					<!-- Download. -->
+					<a class="github-button" href="https://github.com/shayansulehri/simpleJQueryListPlugin/archive/master.zip" data-icon="octicon-cloud-download"
+					    data-size="large" aria-label="Download shayansulehri/simpleJQueryListPlugin on GitHub">Download</a>
+					<!-- View on Github. -->
+					<a class="github-button" href="https://github.com/shayansulehri/simpleJQueryListPlugin" data-size="large" aria-label="View on GitHub">View on GitHub</a>
 				</div>
 			</div>
 			<div class="row">
