--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<div class="col-md-8 ml-auto mr-auto text-center pt-3">
 					<h2>Simple Reorderable List</h2>
 					<h4>JQuery Plugin</h4>
-					<h6>Simple Reorderable List JQuery Plugin is a simple, flexible list plugin. It enables items in a list to be sorted horizontally
+					<h6>Simple Reorderable List JQuery Plugin is a simple, flexible list plugin. It enables items in a list to be sorted vertically
 						using the mouse or up and down arrows.</h6>
 				</div>
 				<div class="col-md-8 ml-auto mr-auto text-center">
