--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+	<meta charset="utf-8">
 	<title>Shayan Sulehri | Reorderable</title>
 	<!-- Custom stlylesheet -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -147,8 +148,7 @@ $('.container').reorderable(array);
 		<!--/Footer Links-->
 	
 		<!--Copyright-->
-		<div class="col-md-12 py-3 text-center">
-			© 2018 Copyright
+		<div class="col-md-12 py-3 text-center">© 2018 Copyright
 			<a href="http://shayansulehri.com/"> Shayan Sulehri </a>
 		</div>
 		<!--/Copyright-->
